[tool.poetry]
name = "sigma-cli"
version = "0.6.0"
description = "Sigma Command Line Interface (conversion, check etc.) based on pySigma"
authors = ["Thomas Patzke <thomas@patzke.org>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/SigmaHQ/sigma-cli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security"
]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
prettytable = "^3.1.1"
pysigma = "^0.9.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
sigma = "sigma.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
